Almost done with the backend crud

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,6 @@
 /* Image style */
 img { max-width:100%; }
+
+.navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
+    color:red;
+}
