--- a/resources/css/styles.css
+++ b/resources/css/styles.css
@@ -4,3 +4,7 @@ img { max-width:100%; }
 .navbar-light .navbar-nav .show > .nav-link, .navbar-light .navbar-nav .active > .nav-link, .navbar-light .navbar-nav .nav-link.show, .navbar-light .navbar-nav .nav-link.active {
     color:red;
 }
+
+.editFormDiv {
+    display: none;
+}
